<resources>
    <string name="app_name">Repo</string>
    <string name="todo1">TODO</string>
    <string name="button1">Button</string>
    <string name="Button">Welcome</string>
    <string name="todo">ImageView</string>
    <string name="TextView">I am</string>
    <string name="select">Select</string>
    <string name="button3">Button</string>
    <string name="button2">Button</string>
    <string name="todo2">TODO</string>
    <string name="next">Next</string>
    <string name="todo4">TODO</string>
    <string name="todo3">TODO</string>
    <string name="button">Button</string>
    <string name="string_button">Camera Button</string>
    <string name="string_string_button">Button</string>
    <string name="textview">TextView</string>
    <string name="string_textview">Mobile no.</string>
    <string name="name">Name</string>
    <string name="simpleButton">Button</string>
    <string name="simpleTextview">TextView</string>
    <string name="Camera_Button">+Add Photo</string>
    <string name="CameraTodo">TODO</string>
    <string name="ImageTodo">TODO</string>
    <string name="preview_description">Image preview will appear here</string>
    <string name="take_photo">Take Photo</string>
    <string name="FacingButton1">TODO</string>
    <string name="captureImagebutton">TODO</string>
    <string name="facingFlashButton">TODO</string>
    <string name="resolution">RESOLUTION</string>
    <string name="todo5">TODO</string>
    <string name="capture_latency">CAPTURE LATENCY</string>
    <string name="approx_uncompressed_size">APPROX. UNCOMPRESSED SIZE</string>
    <string name="CaptureImageButton">TODO</string>
    <string name="FacingButton">TODO</string>
    <string name="Capturevideobutton">TODO</string>
    <string name="FlashButton">TODO</string>
    <string name="about_dialog_title">Dialog Title</string>
    <string name="about_dialog_message">Dialog message</string>
    <string name="url_github">Github</string>
    <string name="url_website">Website</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="text">WELCOME</string>
    <string name="Select">Select</string>
    <string name="name1">Name</string>
    <string name="mobile_no">Mobile no.</string>
    <string name="Take_photo">Capture</string>
    <string name="submit">Submit</string>
    <string name="SendsmsButton">Send SMS</string>
    <string name="OtpEditText">OTP Verification</string>
    <string name="resend_button">Resend</string>
    <string name="string_resend_button">Resend</string>
    <string name="verifyButton">Verify</string>
    <string name="status_textview">Status</string>
    <string name="detail_textview">Detail</string>
    <string name="status_code_sent">Code sent Status</string>
    <string name="status_verification_failed">Verification Failed Status</string>
    <string name="status_verification_succeeded">Verification Succeeded Status</string>
    <string name="instant_validation">Instant validation</string>
    <string name="status_sign_in_failed">Submit Failed</string>
    <string name="signed_out">Sign Out</string>
    <string name="signed_in">Sign in</string>
    <string name="firebase_status_fmt">Firebase status fmt</string>
</resources>
